2025-09-29T01:41:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18083156146 # 1251
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-29
* notice: last 14d: unq all: 42 70
* notice: prev accum: outdated-unq outdated-all / unq all: 4777 9666 / 4836 9735
* notice: next accum: outdated-unq outdated-all / unq all: 4777 9666 / 4838 9737
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-09-15 2025-09-28 2025-09-29]

2025-09-28T12:38:09Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18074362027 # 1250
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-28
* notice: last 14d: unq all: 41 69
* notice: prev accum: outdated-unq outdated-all / unq all: 4775 9664 / 4835 9734
* notice: next accum: outdated-unq outdated-all / unq all: 4777 9666 / 4836 9735
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-09-14] / [2025-09-28]

2025-09-28T01:46:47Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18067663783 # 1249
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-28
* notice: last 14d: unq all: 42 70
* notice: prev accum: outdated-unq outdated-all / unq all: 4773 9661 / 4833 9732
* notice: next accum: outdated-unq outdated-all / unq all: 4775 9664 / 4835 9734
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2025-09-13] / [2025-09-27]

2025-09-27T01:27:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18053108239 # 1247