@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2025-09-29T01:41:22Z",
+  "timestamp" : "2025-09-29T12:45:53Z",
   "count_outdated" : 9666,
   "uniques_outdated" : 4777,
-  "count" : 9737,
-  "uniques" : 4838,
+  "count" : 9739,
+  "uniques" : 4840,
   "clones" : [
     {
       "timestamp": "2025-09-15T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 1, 3 ],
-      "uniques": 2,
+      "count_decinc": [ 2, 3 ],
+      "uniques": 1,
       "uniques_minmax": [ 1, 3 ],
-      "uniques_decinc": [ 1, 3 ]
+      "uniques_decinc": [ 2, 3 ]
     },
     {
       "timestamp": "2025-09-16T00:00:00Z",
@@ -133,12 +133,12 @@
     },
     {
       "timestamp": "2025-09-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "count_decinc": [ 0, 3 ],
+      "uniques": 3,
+      "uniques_minmax": [ 1, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
