@@ -1,11 +1,11 @@
 {
-  "count": 70,
-  "uniques": 42,
+  "count": 71,
+  "uniques": 44,
   "clones": [
     {
       "timestamp": "2025-09-15T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2025-09-16T00:00:00Z",
@@ -74,8 +74,8 @@
     },
     {
       "timestamp": "2025-09-29T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 3,
+      "uniques": 3
     }
   ]
 }
