@@ -1,3 +1,12 @@
+2025-09-29T12:45:53Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18097427799 # 1252
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-29
+* notice: last 14d: unq all: 44 71
+* notice: prev accum: outdated-unq outdated-all / unq all: 4777 9666 / 4838 9737
+* notice: next accum: outdated-unq outdated-all / unq all: 4777 9666 / 4840 9739
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -1 -1 / +3 +3 -0 -0 / 3 3
+* notice: removed / changed dates: [] / [2025-09-15 2025-09-29]
+
 2025-09-29T01:41:22Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18083156146 # 1251
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-29
